[backend-comparison] Add auth command to burnbench CLI

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -106,6 +106,10 @@ text_placeholder = "0.5.0"
 pollster = "0.3"
 wgpu = "0.18.0"
 
+# Burnbench
+arboard = "3.3.0"
+github-device-flow = "0.2.0"
+
 bincode = { version = "2.0.0-rc.3", features = [
     "alloc",
     "serde",
