[backend-comparison] Add --share argument to Burnbench CLI

--- a/backend-comparison/Cargo.toml
+++ b/backend-comparison/Cargo.toml
@@ -36,6 +36,7 @@ dirs = { workspace = true }
 github-device-flow  = { workspace = true }
 rand = { workspace = true }
 ratatui = { workspace = true, optional = true }
+reqwest = {workspace = true, features = ["blocking", "json"]}
 serde_json = { workspace = true }
 strum = { workspace = true }
 strum_macros = { workspace = true }
